--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kanaban Board</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <!-- Toolbox Nav -->
-        
+        <div class="toolbox-cont">
+           <!-- color filter -->
+            <div>
+                <div class="toolbox-priority-cont">
+                    <div class="lightpink color-box"></div>
+                    <div class="lightgreen color-box"></div>
+                    <div class="lightblue color-box"></div>
+                    <div class="black color-box"></div>
+                </div>
+
+            </div>
+            <!--  action button -->
+            <div>
+
+            </div>
+        </div>
     </body>
 </html>
