add the header and priority-filter

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             </div>
             <!--  action button -->
             <div>
-
+                <button class="add-task-btn" onClick=""><i class="fa-solid fa-plus"></i></button>
+                <button class="delete-task-btn" onClick="">Delete Task</button>
             </div>
         </div>
     </body>
+    <script src="https://kit.fontawesome.com/25f05de792.js" crossorigin="anonymous"></script>
 </html>
